# ai-skills-repo

./: .gitignore  AGENTS.md
.trae/documents/: plan_legal-counsel-skill_2026-04-09.md  plan_novel-craft-preface_2026-04-09.md  plan_pm-agent-skill_2026-04-09.md  plan_software-engineer-skill_2026-04-09.md
rs-skills-manager/: Cargo.toml  README.md
rs-skills-manager/src/: config.rs  error.rs  init.rs  install.rs  main.rs  path_utils.rs  skills.rs  store.rs
rs-skills-manager/tests/: cli_init.rs  cli_list.rs  cli_symlink_install.rs
scripts/: README.md  release-sklink
skills/anti-emo-little-sun/: SKILL.md
skills/compliment-little-star/: SKILL.md
skills/deep-interview/: SKILL.md
skills/elysia-service-interface/: SKILL.md
skills/empathy-little-mirror/: SKILL.md
skills/focus-little-anchor/: SKILL.md
skills/github-pr-writer/: SKILL.md
skills/imagination-magnifier/: SKILL.md
skills/legal-counsel/: skill.md
skills/llm-wiki/: SKILL.md
skills/lore-commit-protocol/: SKILL.md
skills/mistake-transformer/: SKILL.md
skills/novel-craft/: skill.md
skills/problem-solving-pocket-guide/: SKILL.md
skills/product-manager/: skill.md
skills/riddle-whiz/: SKILL.md
sklink/: Cargo.toml  README.md
sklink/src/: config.rs  error.rs  git_source.rs  init.rs  install.rs  lib.rs  main.rs  path_utils.rs  skills.rs  store.rs
sklink/tests/: cli_arg_rules.rs  cli_completions.rs  cli_init.rs  cli_list.rs  cli_output.rs  cli_symlink_install.rs  unit_config.rs  unit_git_source.rs  unit_init.rs  unit_install.rs  unit_path_utils.rs  unit_skills.rs
(+22 files in other folders)
