[package]
name = "sklink"
version = "0.2.1"
edition = "2021"
description = "Install skills into platform directories via a local store and symlinks"
documentation = "https://docs.rs/sklink"
license = "MIT"
readme = "README.md"

[[bin]]
name = "sklink"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.6.1"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
toml = "0.8.13"

[dev-dependencies]
tempfile = "3.10.1"
